# btree-vec

./: Cargo.toml  README.md  build.rs
misc/: crate-readme.md
src/: alloc_fallback.rs  debug.rs  insert.rs  lib.rs  remove.rs  verified_alloc.rs
src/node/: internal.rs  leaf.rs  mod.rs  parent_ptr.rs  ref_kind.rs
src/tests/: insert.rs  mod.rs  remove.rs
src/vec/: debug.rs  insert.rs  mod.rs  remove.rs
src/vec/node/: internal.rs  leaf.rs  mod.rs  parent_ptr.rs
tests/: insert.rs  remove.rs  tests.rs
