[package]
name = "btree-vec"
version = "0.2.3"
edition = "2021"
rust-version = "1.59"
description = "A growable array (vector) implemented using a B-tree"
documentation = "https://docs.rs/btree-vec"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/btree-vec"
license = "GPL-3.0-or-later"
keywords = ["b-tree", "vec", "vector", "array"]
categories = ["data-structures", "no-std"]

[dependencies]
tagged-pointer = "0.2"
