[package]
name = "btree-vec"
version = "0.2.8"
edition = "2021"
rust-version = "1.59"
description = "A growable array (vector) implemented using a B-tree"
documentation = "https://docs.rs/btree-vec"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/btree-vec"
license = "GPL-3.0-or-later"
keywords = ["b-tree", "vec", "vector", "array"]
categories = ["data-structures", "no-std"]

[features]
# This should be a weak dependency, but Rust 1.59 doesn't support this.
# btree-vec 0.3 increases the MSRV and makes this a weak dependency.
allocator_api = ["allocator-fallback/allocator_api"]
dropck_eyepatch = ["add-syntax"]

[dependencies]
tagged-pointer = "0.2.4"

[dependencies.add-syntax]
version = "0.1"
optional = true

[dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[build-dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[package.metadata.docs.rs]
features = ["allocator_api"]
