[package]
name = "btree-vec"
version = "0.3.5-dev"
edition = "2021"
rust-version = "1.60"
description = "A growable array (vector) implemented using a B-tree"
documentation = "https://docs.rs/btree-vec"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/btree-vec"
license = "GPL-3.0-or-later"
keywords = ["b-tree", "vec", "vector", "array"]
categories = ["data-structures", "no-std"]

[features]
allocator_api = ["allocator-fallback?/allocator_api"]
dropck_eyepatch = ["add-syntax"]

[dependencies]
tagged-pointer = "0.2.4"

[dependencies.add-syntax]
version = "0.1"
optional = true

[dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[build-dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(any_allocator_api)",
    "cfg(has_allocator_api)",
    "cfg(btree_vec_debug)",
]

[package.metadata.docs.rs]
features = ["allocator_api"]
